--- a/assignments/01_basics.ipynb
+++ b/assignments/01_basics.ipynb
@@ -241,7 +241,17 @@
     "class Power(torch.autograd.Function):\n",
     "    @staticmethod\n",
     "    def forward(tensor, p):\n",
-    "        return tensor.pow(p)\n",
+    "        result = torch.ones_like(tensor)\n",
+    "        if p == 0:\n",
+    "            return result\n",
+    "        elif p > 0:\n",
+    "            for _ in range(p):\n",
+    "                result = result * tensor\n",
+    "        else:\n",
+    "            for _ in range(-p):\n",
+    "                result = result / tensor\n",
+    "\n",
+    "        return result\n",
     "\n",
     "    @staticmethod\n",
     "    def setup_context(ctx, inputs, output):\n",
@@ -253,14 +263,19 @@
     "\n",
     "    @staticmethod\n",
     "    def backward(ctx, grad_output):\n",
-    "        # We return as many input gradients as there were arguments.\n",
-    "        # Gradients of non-Tensor arguments to forward must be None.\n",
-    "        if ctx.p > 0:\n",
-    "           return grad_output * ctx.tensor.pow(ctx.p - 1) * ctx.p, None\n",
-    "        elif ctx.p < 0:\n",
-    "            return grad_output / ctx.tensor.pow(-ctx.p + 1) * ctx.p, None\n",
+    "        tensor, p = ctx.tensor, ctx.p\n",
+    "        grad_tensor = torch.ones_like(tensor)\n",
+    "\n",
+    "        if p > 0:\n",
+    "            for i in range(p - 1):\n",
+    "                grad_tensor = grad_tensor * tensor\n",
+    "            return grad_output * grad_tensor * p, None\n",
+    "        elif p < 0:\n",
+    "            for i in range(-p + 1):\n",
+    "                grad_tensor = grad_tensor / tensor\n",
+    "            return grad_output * grad_tensor * p, None\n",
     "        else:\n",
-    "            return grad_output.zero_(), None\n"
+    "            return grad_output.zero_(), None"
    ]
   },
   {
@@ -449,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "218 μs ± 26.5 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "258 μs ± 3.99 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -467,7 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "760 μs ± 2.47 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "916 μs ± 26.9 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
