--- a/assignments/02_mnist.ipynb
+++ b/assignments/02_mnist.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10e2d7ed0>"
+       "<torch._C.Generator at 0x10997bed0>"
       ]
      },
      "execution_count": 1,
@@ -423,9 +423,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<AddBackward0 object at 0x2897c3280>\n",
+      "<AddBackward0 object at 0x16b6b1960>\n",
       "torch.Size([4, 128])\n",
-      "<AddBackward0 object at 0x2896f0c10>\n",
+      "<AddBackward0 object at 0x15944f160>\n",
       "torch.Size([4, 10])\n"
      ]
     }
