--- a/assignments/03_init_act_norm_optim.ipynb
+++ b/assignments/03_init_act_norm_optim.ipynb
@@ -55,15 +55,31 @@
     "        self, num_features: int, momentum: float = 0.9, eps: float = 1e-5\n",
     "    ) -> None:\n",
     "        super().__init__()\n",
-    "        self.scale = nn.Parameter(...)\n",
-    "        self.shift = nn.Parameter(...)\n",
-    "        self.register_buffer(\"running_mean\", ...)\n",
-    "        self.register_buffer(\"running_var\", ...)\n",
+    "        self.scale = nn.Parameter(torch.ones(num_features))\n",
+    "        self.shift = nn.Parameter(torch.zeros(num_features))\n",
+    "        self.register_buffer(\"running_mean\", torch.zeros(num_features))\n",
+    "        self.register_buffer(\"running_var\", torch.ones(num_features))\n",
     "        self.momentum = momentum\n",
     "        self.eps = eps\n",
     "\n",
     "    def forward(self, x: Tensor) -> Tensor:\n",
-    "        ..."
+    "        if self.training:\n",
+    "            batch_mean = x.mean(dim=0)\n",
+    "            batch_var = x.var(dim=0, unbiased=False)\n",
+    "\n",
+    "            self.running_mean = self.momentum * self.running_mean + (1 - self.momentum) * batch_mean\n",
+    "            self.running_var = self.momentum * self.running_var + (1 - self.momentum) * batch_var\n",
+    "\n",
+    "            mean = batch_mean\n",
+    "            var = batch_var\n",
+    "        else:\n",
+    "            mean = self.running_mean\n",
+    "            var = self.running_var\n",
+    "\n",
+    "        x_normalized = (x - mean) / torch.sqrt(var + self.eps)\n",
+    "\n",
+    "        out = self.scale * x_normalized + self.shift\n",
+    "        return out"
    ]
   },
   {
@@ -84,19 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LayerNorm1d(nn.Module):\n",
     "    def __init__(self, num_features: int, eps: float = 1e-5) -> None:\n",
     "        super(LayerNorm1d, self).__init__()\n",
-    "        self.scale = nn.Parameter(...)\n",
-    "        self.shift = nn.Parameter(...)\n",
+    "        self.scale = nn.Parameter(torch.ones(num_features))\n",
+    "        self.shift = nn.Parameter(torch.zeros(num_features))\n",
     "        self.eps = eps\n",
     "\n",
     "    def forward(self, x: Tensor) -> Tensor:\n",
-    "        ..."
+    "        mean = x.mean(dim=1, keepdim=True)\n",
+    "        var = x.var(dim=1, keepdim=True, unbiased=False)\n",
+    "        \n",
+    "        x_normalized = (x - mean) / torch.sqrt(var + self.eps)\n",
+    "        \n",
+    "        out = self.scale * x_normalized + self.shift\n",
+    "        return out"
    ]
   },
   {
@@ -133,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +221,9 @@
     "\n",
     "@torch.no_grad()\n",
     "def test_epoch(\n",
-    "    dataloader: DataLoader, model: nn.Module, max_batches: int = 100\n",
+    "    dataloader: DataLoader, \n",
+    "    model: nn.Module, \n",
+    "    max_batches: int = 100\n",
     ") -> Tensor:\n",
     "    loss_values: list[float] = []\n",
     "    for i, batch in enumerate(dataloader):\n",
@@ -233,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +265,12 @@
     "    \"\"\"Функция для инициализации параметров модели стандартным нормальным распределением.\"\"\"\n",
     "    for param in model.parameters():\n",
     "        torch.nn.init.normal_(param.data, mean=0, std=1)\n",
+    "\n",
+    "def init_kaiming_normal(model: nn.Module):\n",
+    "    torch.nn.init.kaiming_normal_(model.fc1.weight)\n",
+    "    torch.nn.init.uniform_(model.fc1.bias, -1, 1)\n",
+    "    torch.nn.init.kaiming_normal_(model.fc2.weight)\n",
+    "    torch.nn.init.uniform_(model.fc2.bias, -1, 1)\n",
     "\n",
     "\n",
     "from typing import Type\n",
@@ -271,8 +301,14 @@
     "        # теперь линейные слои будем задавать\n",
     "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
     "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
-    "        self.act_fn = ...\n",
-    "        self.norm = ...\n",
+    "        self.act_fn = act_fn\n",
+    "        if norm is not None:\n",
+    "            if norm == nn.BatchNorm1d:\n",
+    "                self.norm = norm(hidden_dim)\n",
+    "            elif norm == nn.LayerNorm:\n",
+    "                self.norm = norm(hidden_dim)\n",
+    "        else:\n",
+    "            self.norm = None\n",
     "\n",
     "        # reinitialize parameters\n",
     "        init_fn(self)\n",
@@ -317,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,8 +482,7 @@
     "        return lambda x: self.optim_cls(x.parameters(), lr=0.01)\n",
     "\n",
     "    def __repr__(self) -> str:\n",
-    "        # TODO: попробуйте сделать представление эксперимента более читаемым\n",
-    "        return str(self)\n"
+    "        return \"init: \" + self.init_fn.__name__ + \", act: \" + self.act_fn.__name__ + \", norm: \" + (\"None\" if self.norm is None else self.norm.__name__) + \", optim: \" + self.optim_cls.__name__\n"
    ]
   },
   {
@@ -459,18 +494,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[init: init_std_normal, act: tanh, norm: null, optim: SGD,\n",
-       " init: init_std_normal, act: silu, norm: LayerNorm, optim: SGD,\n",
-       " init: init_std_normal, act: relu, norm: BatchNorm1d, optim: RMSprop]"
+       "[init: init_kaiming_normal, act: tanh, norm: LayerNorm, optim: RMSprop,\n",
+       " init: init_std_normal, act: tanh, norm: LayerNorm, optim: RMSprop,\n",
+       " init: init_kaiming_normal, act: silu, norm: LayerNorm, optim: RMSprop,\n",
+       " init: init_kaiming_normal, act: relu, norm: LayerNorm, optim: RMSprop,\n",
+       " init: init_kaiming_normal, act: tanh, norm: None, optim: RMSprop,\n",
+       " init: init_kaiming_normal, act: tanh, norm: BatchNorm1d, optim: RMSprop,\n",
+       " init: init_kaiming_normal, act: tanh, norm: BatchNorm1d, optim: SGD]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,23 +517,47 @@
    "source": [
     "options = [\n",
     "    Experiment(\n",
+    "        init_fn=init_kaiming_normal,\n",
+    "        act_fn=F.tanh,\n",
+    "        norm=nn.LayerNorm,\n",
+    "        optim_cls=torch.optim.RMSprop,\n",
+    "    ),\n",
+    "    Experiment(\n",
     "        init_fn=init_std_normal,\n",
     "        act_fn=F.tanh,\n",
-    "        norm=None,\n",
-    "        optim_cls=torch.optim.SGD,\n",
+    "        norm=nn.LayerNorm,\n",
+    "        optim_cls=torch.optim.RMSprop,\n",
     "    ),\n",
     "    Experiment(\n",
-    "        init_fn=init_std_normal,\n",
+    "        init_fn=init_kaiming_normal,\n",
     "        act_fn=F.silu,\n",
     "        norm=nn.LayerNorm,\n",
-    "        optim_cls=torch.optim.SGD,\n",
+    "        optim_cls=torch.optim.RMSprop,\n",
     "    ),\n",
     "    Experiment(\n",
-    "        init_fn=init_std_normal,\n",
+    "        init_fn=init_kaiming_normal,\n",
     "        act_fn=F.relu,\n",
+    "        norm=nn.LayerNorm,\n",
+    "        optim_cls=torch.optim.RMSprop,\n",
+    "    ),\n",
+    "    Experiment(\n",
+    "        init_fn=init_kaiming_normal,\n",
+    "        act_fn=F.tanh,\n",
+    "        norm=None,\n",
+    "        optim_cls=torch.optim.RMSprop,\n",
+    "    ),\n",
+    "    Experiment(\n",
+    "        init_fn=init_kaiming_normal,\n",
+    "        act_fn=F.tanh,\n",
     "        norm=nn.BatchNorm1d,\n",
     "        optim_cls=torch.optim.RMSprop,\n",
     "    ),\n",
+    "    Experiment(\n",
+    "        init_fn=init_kaiming_normal,\n",
+    "        act_fn=F.tanh,\n",
+    "        norm=nn.BatchNorm1d,\n",
+    "        optim_cls=torch.optim.SGD,\n",
+    "    )\n",
     "]\n",
     "\n",
     "options"
@@ -509,29 +572,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "init: init_std_normal, act: tanh, norm: null, optim: SGD\n",
-      "init: init_std_normal, act: silu, norm: LayerNorm, optim: SGD\n",
-      "init: init_std_normal, act: relu, norm: BatchNorm1d, optim: RMSprop\n"
+      "init: init_kaiming_normal, act: tanh, norm: LayerNorm, optim: RMSprop\n",
+      "init: init_std_normal, act: tanh, norm: LayerNorm, optim: RMSprop\n",
+      "init: init_kaiming_normal, act: silu, norm: LayerNorm, optim: RMSprop\n",
+      "init: init_kaiming_normal, act: relu, norm: LayerNorm, optim: RMSprop\n",
+      "init: init_kaiming_normal, act: tanh, norm: None, optim: RMSprop\n",
+      "init: init_kaiming_normal, act: tanh, norm: BatchNorm1d, optim: RMSprop\n",
+      "init: init_kaiming_normal, act: tanh, norm: BatchNorm1d, optim: SGD\n"
      ]
     }
    ],
    "source": [
-    "seeds = [42]  # здесь вам нужно 3 разных значения\n",
+    "seeds = [42, 69, 777]  # здесь вам нужно 3 разных значения\n",
     "results = []\n",
     "\n",
     "for option in options:\n",
     "    print(option)\n",
     "    for seed in seeds:\n",
     "        loss = run_experiment(\n",
-    "            model_gen=...,\n",
-    "            optim_gen=...,\n",
+    "            model_gen=lambda: MLP(784, 128, 10, init_fn=option.init_fn, norm=option.norm, act_fn=option.act_fn),\n",
+    "            optim_gen=lambda x: option.optim_cls(x.parameters(), lr=0.01),\n",
     "            seed=seed,\n",
     "            n_epochs=10,\n",
     "            max_batches=None,\n",
@@ -549,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -573,39 +640,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>loss</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>desc</th>\n",
-       "      <th></th>\n",
+       "      <th>Option</th>\n",
+       "      <th>Loss</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>init: init_std_normal, act: relu, norm: BatchNorm1d, optim: RMSprop</th>\n",
-       "      <td>0.443120</td>\n",
+       "      <th>0</th>\n",
+       "      <td>init: init_kaiming_normal, act: relu, norm: La...</td>\n",
+       "      <td>0.106520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>init: init_std_normal, act: silu, norm: LayerNorm, optim: SGD</th>\n",
-       "      <td>1.821582</td>\n",
+       "      <th>1</th>\n",
+       "      <td>init: init_kaiming_normal, act: silu, norm: La...</td>\n",
+       "      <td>0.107950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>init: init_std_normal, act: tanh, norm: null, optim: SGD</th>\n",
-       "      <td>3.263790</td>\n",
+       "      <th>2</th>\n",
+       "      <td>init: init_kaiming_normal, act: tanh, norm: Ba...</td>\n",
+       "      <td>0.157452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>init: init_kaiming_normal, act: tanh, norm: Ba...</td>\n",
+       "      <td>0.181891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>init: init_kaiming_normal, act: tanh, norm: La...</td>\n",
+       "      <td>0.119091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>init: init_kaiming_normal, act: tanh, norm: No...</td>\n",
+       "      <td>0.178687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>init: init_std_normal, act: tanh, norm: LayerN...</td>\n",
+       "      <td>0.126667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                        loss\n",
-       "desc                                                        \n",
-       "init: init_std_normal, act: relu, norm: BatchNo...  0.443120\n",
-       "init: init_std_normal, act: silu, norm: LayerNo...  1.821582\n",
-       "init: init_std_normal, act: tanh, norm: null, o...  3.263790"
+       "                                              Option      Loss\n",
+       "0  init: init_kaiming_normal, act: relu, norm: La...  0.106520\n",
+       "1  init: init_kaiming_normal, act: silu, norm: La...  0.107950\n",
+       "2  init: init_kaiming_normal, act: tanh, norm: Ba...  0.157452\n",
+       "3  init: init_kaiming_normal, act: tanh, norm: Ba...  0.181891\n",
+       "4  init: init_kaiming_normal, act: tanh, norm: La...  0.119091\n",
+       "5  init: init_kaiming_normal, act: tanh, norm: No...  0.178687\n",
+       "6  init: init_std_normal, act: tanh, norm: LayerN...  0.126667"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,14 +703,23 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.DataFrame(...)"
+    "df = pd.DataFrame(results, columns=['Option', 'Seed', 'Loss'])\n",
+    "df_grouped = df.groupby('Option', as_index=False)['Loss'].mean()\n",
+    "df_grouped"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ВЫВОДЫ:"
+    "ВЫВОДЫ:\n",
+    "Наилучшая комбинация: Наименьшая потеря была достигнута с конфигурацией init: init_kaiming_normal, act: relu, norm: LayerNorm, optim: RMSprop (Loss = 0.106520), что делает ее наиболее эффективной среди протестированных вариантов.\n",
+    "\n",
+    "Функции активации: relu и silu продемонстрировали более низкие значения потерь по сравнению с tanh.\n",
+    "\n",
+    "Оптимизаторы: Оптимизатор RMSprop дал лучшие результаты в сравнении с SGD\n",
+    "\n",
+    "Инициализация: init_kaiming_normal показала себя лучше, чем init_std_normal"
    ]
   }
  ],
