--- a/workshops/01_pytorch_intro.ipynb
+++ b/workshops/01_pytorch_intro.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -62,26 +62,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1, 2, 3],\n",
-      "        [4, 5, 6]])\n",
+      "tensor([[1., 2., 3.],\n",
+      "        [4., 5., 6.]], device='mps:0')\n",
       "\n",
       "Rank:  2 \n",
       "Shape:  torch.Size([2, 3]) \n",
-      "Device:  cpu \n",
-      "type:  torch.LongTensor\n"
+      "Device:  mps:0 \n",
+      "type:  torch.mps.FloatTensor\n"
      ]
     }
    ],
    "source": [
     "# из списка\n",
-    "x = torch.tensor([[1, 2, 3], [4, 5, 6]])\n",
+    "x = torch.tensor([[1, 2, 3], [4, 5, 6]], device=\"mps\").float()\n",
     "# посмотрим сам тензор и его атрибуты\n",
     "print(x)\n",
     "print(\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -106,22 +106,22 @@
      "output_type": "stream",
      "text": [
       "tensor([[ 2.,  0.,  6.],\n",
-      "        [ 0., 10.,  0.]])\n",
+      "        [ 0., 10.,  0.]], device='mps:0')\n",
       "tensor([[0.5000, 1.0000, 1.5000],\n",
-      "        [2.0000, 2.5000, 3.0000]])\n",
-      "tensor([-1.5000,  1.5000, -1.5000])\n",
+      "        [2.0000, 2.5000, 3.0000]], device='mps:0')\n",
+      "tensor(-0.5000, device='mps:0')\n",
       "tensor([[  6., -12.],\n",
-      "        [ 12., -27.]])\n"
+      "        [ 12., -27.]], device='mps:0')\n"
      ]
     }
    ],
    "source": [
     "# примеры: сложение, умножение на скаляр, агрегация, матричное умножение\n",
-    "y = torch.tensor([[1, -2, 3], [-4, 5, -6]]).float()\n",
+    "y = torch.tensor([[1, -2, 3], [-4, 5, -6]], device=\"mps\").float()\n",
     "print(x + y)\n",
     "print(0.5 * x)\n",
-    "print(y.mean(dim=0))\n",
-    "print(x.float() @ y.T)"
+    "print(y.mean())\n",
+    "print(x @ y.T)"
    ]
   },
   {
@@ -159,9 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 2, 3, 4, 1])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# x=torch.empty(5,7,3)\n",
     "# y=torch.empty(5,7,3)\n",
@@ -169,13 +180,13 @@
     "# x=torch.empty((0,))\n",
     "# y=torch.empty(2,2)\n",
     "\n",
-    "# x=torch.empty(5,3,4,1)\n",
-    "# y=torch.empty(  3,1,1)\n",
+    "x=torch.empty(5,2,3,4,1)\n",
+    "y=torch.empty(    3,1,1)\n",
     "\n",
     "# x=torch.empty(5,2,4,1)\n",
     "# y=torch.empty(  3,1,1)\n",
     "\n",
-    "# (x + y).shape"
+    "(x + y).shape"
    ]
   },
   {
@@ -187,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +220,7 @@
        "        [ 5,  4,  3,  2]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +299,7 @@
        "tensor(24., grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -451,14 +462,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z3/n11m8hqx40s1trg9fk01s2qh0000gp/T/ipykernel_20182/541772334.py:5: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1720538195853/work/build/aten/src/ATen/core/TensorBody.h:494.)\n",
+      "/var/folders/23/gk07fxd946l1r4t0lvylmd840000gn/T/ipykernel_34322/541772334.py:5: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1720538195853/work/build/aten/src/ATen/core/TensorBody.h:494.)\n",
       "  y.grad\n"
      ]
     }
@@ -480,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +500,7 @@
        "tensor(4.)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +671,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m f \u001b[38;5;241m=\u001b[39m w \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      4\u001b[0m f\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m----> 5\u001b[0m \u001b[43mw\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrad\u001b[49m\n",
+      "Cell \u001b[0;32mIn[40], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m f \u001b[38;5;241m=\u001b[39m w \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      4\u001b[0m f\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m----> 5\u001b[0m \u001b[43mw\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrad\u001b[49m\n",
       "\u001b[0;31mRuntimeError\u001b[0m: a leaf Variable that requires grad is being used in an in-place operation."
      ]
     }
@@ -682,14 +693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z3/n11m8hqx40s1trg9fk01s2qh0000gp/T/ipykernel_20182/963600647.py:11: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1720538195853/work/build/aten/src/ATen/core/TensorBody.h:494.)\n",
+      "/var/folders/23/gk07fxd946l1r4t0lvylmd840000gn/T/ipykernel_34322/963600647.py:11: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1720538195853/work/build/aten/src/ATen/core/TensorBody.h:494.)\n",
       "  w = w - w.grad  # здесь w.grad is None!\n"
      ]
     },
@@ -700,7 +711,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# вторая итерация - оказывается, что не ок\u001b[39;00m\n\u001b[1;32m     10\u001b[0m f\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m---> 11\u001b[0m w \u001b[38;5;241m=\u001b[39m \u001b[43mw\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrad\u001b[49m  \u001b[38;5;66;03m# здесь w.grad is None!\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[41], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# вторая итерация - оказывается, что не ок\u001b[39;00m\n\u001b[1;32m     10\u001b[0m f\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m---> 11\u001b[0m w \u001b[38;5;241m=\u001b[39m \u001b[43mw\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrad\u001b[49m  \u001b[38;5;66;03m# здесь w.grad is None!\u001b[39;00m\n",
       "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'Tensor' and 'NoneType'"
      ]
     }
@@ -909,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +929,7 @@
        "tensor(0.8950, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,15 +953,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient function for z = <AddBackward0 object at 0x129bfbe20>\n",
-      "Gradient function for loss = <MeanBackward0 object at 0x129bfb4c0>\n"
+      "Gradient function for z = <AddBackward0 object at 0x147d040d0>\n",
+      "Gradient function for loss = <MeanBackward0 object at 0x147d040d0>\n"
      ]
     }
    ],
@@ -968,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1142,12 +1153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n",
+      "mps:0\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.device)\n",
-    "x = x.to(device=\"cuda\")  # или device=mps для Mac старше M1\n",
+    "x = x.to(device=\"mps\")  # или device=mps для Mac старше M1\n",
     "print(x.device)"
    ]
   },
@@ -1191,9 +1211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.3861, grad_fn=<BinaryCrossEntropyWithLogitsBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# сохраняем состояние модуля\n",
     "torch.save(logreg.state_dict(), \"logreg.pt\")\n",
@@ -1215,9 +1243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Tensor for argument #2 'mat2' is on CPU, but expected it to be on GPU (while checking arguments for mm)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# загружаем\u001b[39;00m\n\u001b[1;32m      5\u001b[0m new_model \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlogreg.pt\u001b[39m\u001b[38;5;124m\"\u001b[39m, weights_only\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 6\u001b[0m z \u001b[38;5;241m=\u001b[39m \u001b[43mnew_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m loss \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mfunctional\u001b[38;5;241m.\u001b[39mbinary_cross_entropy_with_logits(z, y)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss)\n",
+      "Cell \u001b[0;32mIn[46], line 8\u001b[0m, in \u001b[0;36mLogReg.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, x: torch\u001b[38;5;241m.\u001b[39mTensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor:\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbias\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Tensor for argument #2 'mat2' is on CPU, but expected it to be on GPU (while checking arguments for mm)"
+     ]
+    }
+   ],
    "source": [
     "# сохраняем состояние модуля\n",
     "torch.save(logreg, \"logreg.pt\")\n",
