--- a/workshops/05_lightning_etc.ipynb
+++ b/workshops/05_lightning_etc.ipynb
@@ -1675,7 +1675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dl-mcs",
+   "display_name": "dl-course",
    "language": "python",
    "name": "python3"
   },
@@ -1689,7 +1689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.5"
   },
   "orig_nbformat": 4
  },
